--- a/index.html
+++ b/index.html
@@ -1,50 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Hacker's Haven</title>
-<style>
-  body { background-color: #0f0f0f; color: #33ff33; font-family: 'Courier New', monospace; }
-  .container { width: 80%; margin: auto; overflow: hidden; }
-  header { padding: 20px; text-align: center; }
-  nav { background: #202020; padding: 5px; text-align: center; }
-  nav a { color: #33ff33; text-decoration: none; padding: 10px 20px; }
-  nav a:hover { background: #505050; }
-  .content { padding: 20px; }
-  footer { background: #202020; color: #33ff33; text-align: center; padding: 10px; margin-top: 20px; }
-</style>
-</head>
-<body>
+<h1 align="center">Hi 👋, I'm HACKUR</h1>
+<h3 align="center">A minecraft server developer from India</h3>
 
-<header>
-  <h1>Hacker's Haven</h1>
-  <p>Welcome to the digital underground</p>
-</header>
+<img align="right"alt="coding" width="400" src="https://user-images.githubusercontent.com/55389276/140866485-8fb1c876-9a8f-4d6a-98dc-08c4981eaf70.gif">
 
-<nav>
-  <a href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#projects">Projects</a>
-  <a href="#contact">Contact</a>
-</nav>
+<p align="left"> <img src="https://komarev.com/ghpvc/?username=hackur22&label=Profile%20views&color=0e75b6&style=flat" alt="hackur22" /> </p>
 
-<div class="container">
-  <section class="content">
-    <h2 id="home">Home</h2>
-    <p>This is the home section where you can introduce your hacking philosophy.</p>
-    <h2 id="about">About</h2>
-    <p>Here you can talk about your journey and skills in ethical hacking.</p>
-    <h2 id="projects">Projects</h2>
-    <a href="https://github.com/HACKUR22"> GITHUB </a>
-    <h2 id="contact">Contact</h2>
-    <a href="https://discord.gg/PJhJSVV5W9"> DISCORD </a>
-  </section>
-</div>
+- 🔭 I’m currently working on **GODSPUNKY NETWORK LS**
 
-<footer>
-  <p>© 2024 Hacker's Haven</p>
-</footer>
+- 🌱 I’m currently learning **java,html etc**
 
-</body>
-</html>
+- 👯 I’m looking to collaborate on **OWN HOSTING**
+
+- 👨‍💻 All of my projects are available at [hackur22.github.io](hackur22.github.io)
+
+- 📫 How to reach me **legendgamerpro22@gmail.com**
+
+- 📄 Know about my experiences [https://discord.gg/459dsemxCu](https://discord.gg/459dsemxCu)
+
+- ⚡ Fun fact **I think I am funny 😅**
+
+<h3 align="left">Connect with me:</h3>
+<p align="left">
+<a href="https://discord.gg/459dsemxCu" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/discord.svg" alt="459dsemxCu" height="30" width="40" /></a>
+</p>
+
+<h3 align="left">Languages and Tools:</h3>
+<p align="left"> <a href="https://www.oracle.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/oracle/oracle-original.svg" alt="oracle" width="40" height="40"/> </a> <a href="https://www.photoshop.com/en" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/photoshop/photoshop-line.svg" alt="photoshop" width="40" height="40"/> </a> <a href="https://www.python.org" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="python" width="40" height="40"/> </a> <a href="https://unity.com/" target="_blank" rel="noreferrer"> <img src="https://www.vectorlogo.zone/logos/unity3d/unity3d-icon.svg" alt="unity" width="40" height="40"/> </a> <a href="https://unrealengine.com/" target="_blank" rel="noreferrer"> <img src="https://raw.githubusercontent.com/kenangundogan/fontisto/036b7eca71aab1bef8e6a0518f7329f13ed62f6b/icons/svg/brand/unreal-engine.svg" alt="unreal" width="40" height="40"/> </a> </p>
+
+<p><img align="left" src="https://github-readme-stats.vercel.app/api/top-langs?username=hackur22&show_icons=true&locale=en&layout=compact" alt="hackur22" /></p>
+
+<p>&nbsp;<img align="center" src="https://github-readme-stats.vercel.app/api?username=hackur22&show_icons=true&locale=en" alt="hackur22" /></p>
+
+<p><img align="center" src="https://github-readme-streak-stats.herokuapp.com/?user=hackur22&" alt="hackur22" /></p>
