--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+
 <h1 align="center">Hi 👋, I'm HACKUR</h1>
 <h3 align="center">A minecraft server developer from India</h3>
 
 <img align="right"alt="coding" width="400" src="https://user-images.githubusercontent.com/55389276/140866485-8fb1c876-9a8f-4d6a-98dc-08c4981eaf70.gif">
 
-<p align="left"> <img src="https://komarev.com/ghpvc/?username=hackur22&label=Profile%20views&color=0e75b6&style=flat" alt="hackur22" /> </p>
 
-- 🔭 I’m currently working on **GODSPUNKY NETWORK LS**
 
-- 🌱 I’m currently learning **java,html etc**
+- 🔭 I’m currently working on <b>GODSPUNKY NETWORK LS</b><br>
 
-- 👯 I’m looking to collaborate on **OWN HOSTING**
+- 🌱 I’m currently learning <b>java,html etc</b><br>
 
-- 👨‍💻 All of my projects are available at [hackur22.github.io](hackur22.github.io)
+- 👯 I’m looking to collaborate on <b>OWN HOSTING</b><br>
 
-- 📫 How to reach me **legendgamerpro22@gmail.com**
+- 👨‍💻 All of my projects are available at [hackur22.github.io](hackur22.github.io)<br>
 
-- 📄 Know about my experiences [https://discord.gg/459dsemxCu](https://discord.gg/459dsemxCu)
+- 📫 How to reach me <b>legendgamerpro22@gmail.com</b><br>
 
-- ⚡ Fun fact **I think I am funny 😅**
+- 📄 Know about my experiences [https://discord.gg/459dsemxCu](https://discord.gg/459dsemxCu)<br>
+
+- ⚡ Fun fact <b>I think I am funny 😅</b><br>
 
 <h3 align="left">Connect with me:</h3>
 <p align="left">
@@ -32,3 +36,6 @@
 <p>&nbsp;<img align="center" src="https://github-readme-stats.vercel.app/api?username=hackur22&show_icons=true&locale=en" alt="hackur22" /></p>
 
 <p><img align="center" src="https://github-readme-streak-stats.herokuapp.com/?user=hackur22&" alt="hackur22" /></p>
+
+</body>
+</html>
