--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 
-- 🔭 I’m currently working on <b>GODSPUNKY NETWORK LS</b><br>
+- 🔭 I’m currently working on <b>MAKING GB NODES WORLD BEST HOSTING</b><br>
 
 - 🌱 I’m currently learning <b>java,html etc</b><br>
 
