--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 
 - 👯 I’m looking to collaborate on <b>OWN HOSTING</b><br>
 
-- 👨‍💻 All of my projects are available at [hackur22.github.io](hackur22.github.io)<br>
+- 👨‍💻 All of my projects are available at (hackur22.github.io)<br>
 
 - 📫 How to reach me <b>legendgamerpro22@gmail.com</b><br>
 
-- 📄 Know about my experiences [https://discord.gg/459dsemxCu](https://discord.gg/459dsemxCu)<br>
+- 📄 Know about my experiences (https://discord.gg/459dsemxCu)<br>
 
-- ⚡ Fun fact <b>I think I am funny 😅</b><br>
+- ⚡ Fun fact <b>I want to become a sucessful developer😅</b><br>
 
 <h3 align="left">Connect with me:</h3>
 <p align="left">
