--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 - 📄 Know about my experiences (https://discord.gg/459dsemxCu)<br>
 
-- ⚡ Fun fact <b>I want to become a sucessful developer😅</b><br>
+- ⚡ Fun fact <b>I want to become a sucessful developer🤗</b><br>
 
 <h3 align="left">Connect with me:</h3>
 <p align="left">
