--- a/index.html
+++ b/index.html
@@ -257,12 +257,12 @@
                Website Designing - Google Certification</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - 3rd at Web developing championship - 2019</li>
+              3<sup>st</sup>
+              Place - at Web developing championship - 2019</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - 1st in byjus art championship - 2018</li>
+              1<sup>rd</sup>
+              Place - in byjus art championship - 2018</li>
           </ul>
         </div>
       </section>
