--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               3<sup>st</sup>
-              Place - at Web developing championship - 2019</li>
+              Place - At Web developing championship - 2019</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               1<sup>rd</sup>
-              Place - in byjus art championship - 2018</li>
+              Place - In byjus art championship - 2018</li>
           </ul>
         </div>
       </section>
