--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                                                     <!-- list item -->
                                                     <li>Server Optimisation</li>
                                                     <!-- list item -->
-                                                    <li></li>
+                                                    <li>Full Time Availability</li>
                                                     <!-- list item -->
                                                     <li class="art-empty-item">SyS Admin & Cyber Security</li>
                                                 </ul>
