--- a/index.html
+++ b/index.html
@@ -401,11 +401,11 @@
                                             <!-- counter -->
                                             <div class="art-counter-box">
                                                 <!-- counter number -->
-                                                <span class="art-counter">3</span>
+                                                <span class="art-counter">3</span><span class="art-counter-plus">+</span>
                                             </div>
                                             <!-- counter end -->
                                             <!-- title -->
-                                            <h6>Staff Roles</h6>
+                                            <h6>Live Projects</h6>
                                         </div>
                                     </div>
                                 </div>
