--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                         <div class="art-a art-price">
                                             <!-- price body -->
                                             <div class="art-price-body">
-                                                <h5 class="mb-30">#1 Minecraft Dev Pricing</h5>
+                                                <h5 class="mb-30">💠Starter Plan</h5>
                                                 <!-- price cost -->
                                                 <div class="art-price-cost">
                                                     <div class="art-number"><span>₹</span>2499<span>M</span></div>
@@ -548,7 +548,7 @@
                                                     <!-- list item -->
                                                     <li>Server Optimisation</li>
                                                     <!-- list item -->
-                                                    <li class="art-empty-item">Full Time Availability</li>
+                                                    <li class="art-empty-item">Basic Plugin Support</li>
                                                     <!-- list item -->
                                                     <li class="art-empty-item">SyS Admin & Cyber Security</li>
                                                 </ul>
@@ -571,10 +571,10 @@
                                         <div class="art-a art-price art-popular-price">
                                             <!-- price body -->
                                             <div class="art-price-body">
-                                                <h5 class="mb-30">#2 Minecraft Dev Pricing</h5>
+                                                <h5 class="mb-30">🔷 Pro Plan</h5>
                                                 <!-- price cost -->
                                                 <div class="art-price-cost">
-                                                    <div class="art-number"><span>₹</span>3499<span>M</span></div>
+                                                    <div class="art-number"><span>₹</span>5499<span>M</span></div>
                                                 </div>
                                                 <!-- price cost end -->
                                                 <!-- price list -->
@@ -584,7 +584,7 @@
                                                     <!-- list item -->
                                                     <li>Server Optimisation</li>
                                                     <!-- list item -->
-                                                    <li>Full Time Availability</li>
+                                                    <li>Custom Plugin Tweaks</li>
                                                     <!-- list item -->
                                                     <li class="art-empty-item">SyS Admin & Cyber Security</li>
                                                 </ul>
@@ -607,10 +607,10 @@
                                         <div class="art-a art-price">
                                             <!-- price body -->
                                             <div class="art-price-body">
-                                                <h5 class="mb-30">All In One Pricing</h5>
+                                                <h5 class="mb-30">🛡️ All-In-One Plan</h5>
                                                 <!-- price cost -->
                                                 <div class="art-price-cost">
-                                                    <div class="art-number"><span>₹</span>6499<span>M</span></div>
+                                                    <div class="art-number"><span>₹</span>12499<span>M</span></div>
                                                 </div>
                                                 <!-- price cost end -->
                                                 <!-- price list -->
@@ -618,11 +618,11 @@
                                                     <!-- list item -->
                                                     <li>Server Development</li>
                                                     <!-- list item -->
-                                                    <li>Server Optimisation</li>
+                                                    <li>Advanced Optimization</li>
                                                     <!-- list item -->
-                                                    <li>Sysyem Administration</li>
+                                                    <li>Premium Plugin Integration</li>
                                                     <!-- list item -->
-                                                    <li>Cyber Security</li>
+                                                    <li>System Administration & Cyber Security Suite</li>
                                                 </ul>
                                                 <!-- price list end -->
                                                 <!-- button -->
