--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                                                 <!-- price list -->
                                                 <ul class="art-price-list">
                                                     <!-- list item -->
-                                                    <li>Server Development</li>
+                                                    <li>Network Development</li>
                                                     <!-- list item -->
                                                     <li>Advanced Optimization</li>
                                                     <!-- list item -->
